--- a/wcautil/appveyor.yml
+++ b/wcautil/appveyor.yml
@@ -14,7 +14,7 @@ environment:
   NUGET_XMLDOC_MODE: skip
 
 build_script:
-  - appveyor.cmd
+  - wcautil\appveyor.cmd
 
 pull_requests:
   do_not_increment_build_number: true
@@ -26,7 +26,7 @@ skip_branch_with_pr: true
 skip_tags: true
 
 artifacts:
-- path: build\Release\**\*.nupkg
+- path: wcautil\build\Release\**\*.nupkg
   name: nuget
 
 notifications:
