--- a/dutil/appveyor.yml
+++ b/dutil/appveyor.yml
@@ -18,6 +18,10 @@ environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   NUGET_XMLDOC_MODE: skip
 
+only_commits:
+  files:
+    - dutil\
+
 build_script:
   - dutil\appveyor.cmd
 
