--- a/wcautil/src/wcautil/packages.config
+++ b/wcautil/src/wcautil/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Nerdbank.GitVersioning" version="2.1.65" developmentDependency="true" targetFramework="net40" />
-  <package id="WixToolset.DUtil" version="4.0.65" targetFramework="native" />
+  <package id="Nerdbank.GitVersioning" version="3.4.194" developmentDependency="true" targetFramework="native" />
+  <package id="WixToolset.DUtil" version="4.0.0-preview.0-build.7" targetFramework="native" />
 </packages>
