Update WixBA to Mba.Core 4.0.9.

--- a/src/WixToolset.WixBA/WixBA.BootstrapperCore.config
+++ b/src/WixToolset.WixBA/WixBA.BootstrapperCore.config
@@ -3,8 +3,8 @@
 
 <configuration>
     <configSections>
-        <sectionGroup name="wix.bootstrapper" type="WixToolset.BootstrapperCore.BootstrapperSectionGroup, WixToolset.BootstrapperCore">
-            <section name="host" type="WixToolset.BootstrapperCore.HostSection, WixToolset.BootstrapperCore" />
+        <sectionGroup name="wix.bootstrapper" type="WixToolset.Mba.Core.BootstrapperSectionGroup, WixToolset.Mba.Core">
+            <section name="host" type="WixToolset.Mba.Core.HostSection, WixToolset.Mba.Core" />
         </sectionGroup>
     </configSections>
     <startup useLegacyV2RuntimeActivationPolicy="true">
