--- a/src/WixToolset.WixBA/packages.config
+++ b/src/WixToolset.WixBA/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Nerdbank.GitVersioning" version="2.1.65" targetFramework="net45" developmentDependency="true" />
-  <package id="WixToolset.BootstrapperCore" version="4.0.5" targetFramework="net45" />
+  <package id="WixToolset.BootstrapperCore" version="4.0.8" targetFramework="net45" />
+  <package id="WixToolset.Mba.Core" version="4.0.9" targetFramework="net45" />
 </packages>
